# fastapi-template

./: cookiecutter.json
hooks/: post_gen_project.py
{{ cookiecutter.project_name|lower|replace(' ', '-') }}/: .flake8  .pre-commit-config.yaml  LICENSE  README.md  git_ignore  mypy.ini  noxfile.py  pyproject.toml
{{ cookiecutter.project_name|lower|replace(' ', '-') }}/docs_sources/mkdocs/: index.md  mkdocs.yml
{{ cookiecutter.project_name|lower|replace(' ', '-') }}/docs_sources/mkdocs/api/: main.md  manage.md  settings.md
{{ cookiecutter.project_name|lower|replace(' ', '-') }}/docs_sources/mkdocs/api/users/: base.md  depends.md
{{ cookiecutter.project_name|lower|replace(' ', '-') }}/docs_sources/mkdocs/overrides/: main.html
{{ cookiecutter.project_name|lower|replace(' ', '-') }}/docs_sources/mkdocs/reference/: shortcuts.md
{{ cookiecutter.project_name|lower|replace(' ', '-') }}/docs_sources/mkdocs/reference/users/: middleware.md  models.md  pwned.md  schema.md  utils.md  validators.md
{{ cookiecutter.project_name|lower|replace(' ', '-') }}/licenses/: Apache-2  BSD-3  GPL-3  ISC  MPL-2
{{ cookiecutter.project_name|lower|replace(' ', '-') }}/src/{{ cookiecutter.project_slug }}/: __init__.py  main.py  manage.py  settings.py  shortcuts.py
{{ cookiecutter.project_name|lower|replace(' ', '-') }}/src/{{ cookiecutter.project_slug }}/users/: base.py  depends.py  pwned.py  schema.py  services.py  utils.py  validators.py  views.py
{{ cookiecutter.project_name|lower|replace(' ', '-') }}/tests/: __init__.py  test_main.py  test_manage.py
{{ cookiecutter.project_name|lower|replace(' ', '-') }}/tests/users_tests/: test_views.py
