[tool.poetry]
name = "{{ cookiecutter.project_slug }}"
version = "{{ cookiecutter.version }}"
description = "{{ cookiecutter.description }}"
authors = ["{{ cookiecutter.author_name }} <{{ cookiecutter.email }}>"]
license = "{{ cookiecutter.license }}"
readme = "README.md"
homepage = "{{ cookiecutter.domain_name }}"
documentation = ""
repository = "https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.project_name|lower|replace(' ', '-')|replace('_', '-') }}/"
keywords = ["{{ cookiecutter.project_slug }}"]

[tool.poetry.dependencies]
python = "^3.8"
confusable_homoglyphs = "^3.2.0"
fastapi = "^0.65"
loguru = "^0.5"
passlib = {extras = ["bcrypt"], version = "^1.7"}
python-dotenv = "^0.17"
tortoise-orm = {extras = ["accel"], version = "^0.17"}
typer = {extras = ["all"], version = "^0.3"}
fastapi-jwt-auth = "^0.5"

[tool.poetry.dev-dependencies]
black = "^21.5b1"
codecov = "^2.1"
coverage = {extras = ["toml"], version = "^5.5"}
darglint = "^1.8"
flake8 = "^3.9"
flake8-annotations = "^2.6"
flake8-bandit = "^2.1"
flake8-black = "^0.2"
flake8-bugbear = "^21.4"
flake8-docstrings = "^1.6"
flake8-import-order = "^0.18"
isort = "^5.8"
radon = "^4.5"
mkdocs-material = "^7.1"
mkdocstrings = "^0.15"
mkdocs-minify-plugin = "^0.4"
mkdocs-git-revision-date-localized-plugin = "^0.9"
mkdocs-git-authors-plugin = "^0.3"
mypy = "^0.812"
pytest = "^6.2"
pytest-cov = "^2.12"
safety = "^1.10"
typeguard = "^2.12"
xdoctest = "^0.15"
asynctest = "^0.13"
pytest-dotenv = "^0.5"

[tool.poetry.scripts]
{{ cookiecutter.project_name|lower|replace(' ', '-')|replace('_', '-') }} = "{{ cookiecutter.project_slug }}.manage:app"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["{{ cookiecutter.project_slug }}"]

[tool.coverage.report]
show_missing = true
fail_under = 85

[tool.isort]
profile="black"

[tool.pytest.ini_options]
minversion = "6.0"
env_files = ".test.env"
python_files = "tests.py test_*.py *_tests.py"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
